<resources>
    <string name="app_name">mtDemo</string>
    <string name="back">&#xe625;</string>
    <string name="close">&#xe626;</string>
    <string name="like">&#xe62e;</string>
    <string name="mine">&#xe634;</string>
    <string name="home">&#xe635;</string>
    <string name="sort">&#xe636;</string>
    <string name="checked">&#xe641;</string>
    <string name="unchecked">&#xe642;</string>
    <string name="show_pd">&#xe63a;</string>
    <string name="search">&#xe600;</string>

    <string name="daily">&#xe64b;</string>
    <string name="ticket">&#xe64d;</string>
    <string name="show">&#xe643;</string>
    <string name="star">&#xe644;</string>
    <string name="edit">&#xe64f;</string>
    <string name="scan">&#xe633;</string>
    <string name="cart">&#xe70b;</string>
    <string name="position">&#xe65b;</string>


    <!--图标 ”我的“界面-->
    <!--标题-->
    <string name="settings">&#xe8b7;</string>
    <string name="notification">&#xe716;</string>
    <!--上部-->
    <string name="red_bao">&#xe6da;</string>
    <string name="coupon">&#xe899;</string>
    <string name="allowance">&#xe602;</string>
    <!--底部-->
    <string name="my_local">&#xe65b;</string>
    <string name="foot_print">&#xe671;</string>
    <string name="my_likes">&#xe8c6;</string>
    <string name="acknowledge_log">&#xe61e;</string>
    <string name="comments">&#xe60c;</string>
    <string name="my_assistant">&#xe740;</string>
    <string name="commercial">&#xe601;</string>
    <string name="more">&#xe73a;</string>

    <string name="add2cart">&#xe776;</string>

    <string name="tvItemCommodity">"商品%d\n%s"</string>
    <string name="tvItemCommodityPrice">"￥%.2f"</string>
    <string name="tvDelay">"%ds"</string>
    <string name="send_again">再次发送</string>
    <string name="vc_hint">验证码已发生至：</string>
    <string name="vc_change_phone">更换手机号码</string>
    <string name="vc_title">验证码</string>
    <string name="login_title_assist">帮助</string>
    <string name="button_skip">跳过</string>
    <string name="home_search_hint">搜索</string>

    <string name="add">&#xe6a2;</string>
    <string name="minus">&#xe6c3;</string>
    <string name="welcom_to_mt">欢迎登录美团</string>
    <string name="_86">+86</string>
    <string name="_splitter"><![CDATA[>]]></string>
    <string name="phone_hint">手机号</string>
    <string name="login_hint">未注册的手机号验证和将自动创建账户</string>
    <string name="pwd_hint">密码</string>
    <string name="bt_login_hint">登录</string>
    <string name="contract_hint">我已阅读并同意啦啦啦啦啦啦啦啦，并授权mt使用哈哈哈哈哈哈哈哈哈哈哈哈哈，对喵喵喵喵喵喵喵喵喵喵喵统一管理</string>
    <string name="bt_use_vc">使用验证码</string>
    <string name="bt_help">遇到问题</string>
    <string name="my_function">我的功能</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_asset">我的资产</string>
    <string name="vip_hint">开通获得6张无门槛会员红包</string>
    <string name="vip">美团会员</string>
    <string name="vip_bt">立即开通</string>
    <string name="default_username">我的用户名</string>
    <string name="content_discreption_profile">头像</string>
    <string name="cart_select_all">全选</string>
    <string name="cart_total">合计:</string>
    <string name="cart_purchase">买买买！</string>

    <string name="delete">&#xe662;</string>
</resources>